Ajout de config.json au .gitignore
Changer le token par le token de votre bot
Changer le préfix par le ClientID de votre bot

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "NDA4NjM3MzY3Mjk4MTYyNjg5.DVS86w.vfoaaHHYJjjjNIb4CL2mYdEy-iA",
-  "prefix": "<@408637367298162689> "
+  "token": "NDA4Njc0ODkwOTc2MTk4NjU2.DVTnEw.W8pWbD4mbYGzVqMyWx-Lp5l9CDU",
+  "prefix": "<@408674890976198656> "
 }
